--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "lodash.filter": "^4.6.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
