--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "fuse.js": "^7.0.0",
     "lodash.filter": "^4.6.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^10.0.1"
   },
