--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-dotenv": "^3.4.9",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^10.0.1"
